--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-proz
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Conexão com um arquivo JavaScript</title>
+</head>
+<body>
+
+    <script src="javascript.js"></script>
+</body>
+</html>
